make mobile responsive

--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
               <p>
                 <span class="code code-block">&lt;h1&gt;</span>
                 <span class="name">I am Ankit</span>
-                <span class="code code-block">&lt;h1/&gt;</span>
+                <span class="code code-block">&lt;/h1&gt;</span>
               </p>
               <p>
                 <span class="code code-block">&lt;p&gt;</span>
                 <span class="title">Self-taught Software Enginner</span>
-                <span class="code code-block">&lt;p/&gt;</span>
+                <span class="code code-block">&lt;/p&gt;</span>
               </p>
             </div>
             <div class="code-block">
-              <span class="code">&lt;</span> div <span class="code">/&gt;</span>
+              <span class="code">&lt;/</span> div <span class="code">&gt;</span>
             </div>
             <a class="btn-cta">Say Hello</a>
           </div>
