--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   </head>
   <body>
     <main>
+      <!-- Calender & Clock -->
       <aside class="aside-calender">
         <div class="time">
           <span class="hours"></span> <span>:</span>
@@ -36,6 +37,7 @@
         </div>
       </aside>
       <header>
+        <!-- Top navigation bar -->
         <div class="navigation">
           <div class="container">
             <nav class="nav-bar">
@@ -60,6 +62,7 @@
             </nav>
           </div>
         </div>
+        <!-- Hero Section -->
         <div class="hero container">
           <div class="cta">
             <h1 class="heading">HI!</h1>
@@ -91,6 +94,7 @@
             />
           </div>
         </div>
+        <!-- Bottom Navigation Bar -->
         <nav class="sec-nav">
           <ul>
             <li><a href="./index.html">Home</a></li>
@@ -122,7 +126,7 @@
         </div>
       </aside>
     </main>
-
+    <!-- ioicons package for icons -->
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.esm.js"
@@ -132,6 +136,7 @@
       nomodule
       src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.js"
     ></script>
+    <!-- logic for Calender & Clock -->
     <script src="./app.js"></script>
   </body>
 </html>
